# cmake-protobuf-example

./: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  student.proto
